--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -6,14 +6,15 @@
   --button-primary-hover: #383838;
   --button-secondary-hover: #f2f2f2;
 
-  display: grid;
-  grid-template-rows: 20px 1fr 20px;
   align-items: center;
+  display: grid;
+  gap: 24px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 24px 1fr 24px;
   justify-items: center;
-  min-height: 100svh;
-  padding: 80px;
-  gap: 64px;
-  font-family: var(--font-geist-sans);
+  font-family: var(--font-inter);
+  font-weight: 800;
+  padding: 24px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -28,32 +29,26 @@
 }
 
 .main {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-  grid-row-start: 2;
+  grid-row: 2;
 }
 
-.main ol {
-  font-family: var(--font-geist-mono);
-  padding-left: 0;
-  margin: 0;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: -0.01em;
-  list-style-position: inside;
+.main .logo {
+  bottom: 24px;
+  left: 40px;
+  position: fixed;
 }
 
-.main li:not(:last-of-type) {
-  margin-bottom: 8px;
+.main h1 {
+  font-family: var(--font-abcromwide);
+  font-size: 42px;
+  line-height: 44px;
+  text-transform: uppercase;
 }
 
-.main code {
-  font-family: inherit;
-  background: var(--gray-alpha-100);
-  padding: 2px 4px;
-  border-radius: 4px;
-  font-weight: 600;
+.main h2 {
+  font-family: var(--font-abcromwide);
+  font-size: 36px;
+  line-height: 38px;
 }
 
 .ctas {
@@ -89,22 +84,6 @@ a.secondary {
   min-width: 180px;
 }
 
-.footer {
-  grid-row-start: 3;
-  display: flex;
-  gap: 24px;
-}
-
-.footer a {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-.footer img {
-  flex-shrink: 0;
-}
-
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
   a.primary:hover {
@@ -124,17 +103,8 @@ a.secondary {
 }
 
 @media (max-width: 600px) {
-  .page {
-    padding: 32px;
-    padding-bottom: 80px;
-  }
-
   .main {
     align-items: center;
-  }
-
-  .main ol {
-    text-align: center;
   }
 
   .ctas {
