--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,11 @@
 html,
 body {
   height: 100vh;
+  cursor: url('../../public/icons/MouseIconLarge.png'), auto;
+}
+
+body:focus {
+  cursor: url('../../public/icons/MouseIconLarge.png'), auto;
 }
 
 body {
