--- a/src/components/todolist/todolist.module.css
+++ b/src/components/todolist/todolist.module.css
@@ -65,8 +65,8 @@
 }
 
 .todoListItem:hover .todoListItemText {
-    background-color: black;
-    color: white;
+    background-color: var(--highlight-background);
+    color: var(--highlight-foreground);
 }
 
 .todoListItem:last-child {
@@ -111,7 +111,7 @@
     transform: scale(1);
 }
 
-.todoListItem:hover .checkbox {
+.todoListItem[data-mode="1"]:hover .checkbox {
     transform: scale(1.1);
 }
 
@@ -120,7 +120,7 @@
     top: -32px;
     border-radius: 4px;
     color: white;
-    content: 'Mark complete';
+    content: attr(data-tooltip);
     left: -50%;
     padding: 6px;
     opacity: 0;
