--- a/src/components/todolist/todolist.module.css
+++ b/src/components/todolist/todolist.module.css
@@ -46,6 +46,7 @@
     margin: 0;
     margin-bottom: 8px;
     padding: 0;
+    padding-top: 8px;
 }
 
 .todoListItem {
@@ -96,6 +97,7 @@
     display: inline-block;
     height: 40px;
     margin-right: 8px;
+    overflow: hidden;
     position: relative;
     transform: scale(1);
     transition: all 0.2s ease-in;
@@ -104,7 +106,7 @@
 
 .checkbox .checkboxcheck {
     transform: scale(0);
-    transition: transform 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out, width 0.3s ease-in-out;
 }
 
 .checkbox[data-checked="true"] .checkboxcheck {
@@ -113,6 +115,37 @@
 
 .todoListItem[data-mode="1"]:hover .checkbox {
     transform: scale(1.1);
+}
+
+.todoListItem:not([data-mode="1"]) .checkbox {
+    width: 0;
+}
+
+.todoListItem:not([data-mode="1"]) .checkboxcheck {
+    transform: scale(0);
+}
+
+.todoListItemCheckboxDisabled {
+    background: var(--secondary-gray);
+    border: none;
+}
+
+.todoListItemErase {
+    background: white;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    right: 100%;
+    top: 0;
+    transition: all 0.5s ease-in-out;
+}
+
+.todoListItem[data-mode="2"]:hover .todoListItemErase {
+    right: 85%;
+}
+
+.todoListItem[data-mode="2"] .todoListItemErase.erased {
+    right: 0;
 }
 
 .checkbox:after {
@@ -138,7 +171,11 @@
 }
 
 .todoHeading {
-    margin: 6px 0 16px;
+    margin: 12px 0 6px;
+}
+
+.todoDate {
+    margin: 6px 0 20px;
 }
 
 input.todoListInput {
@@ -152,11 +189,19 @@ input.todoListInput {
     transition: all 0.2s ease-in;
 }
 
+input.todoListInputDisabled {
+    background: var(--secondary-gray);
+}
+
+input.todoListInput.todoListInputDisabled::placeholder {
+    color: var(--primary-gray);
+}
+
 input.todoListInput::placeholder {
     color: black;
 }
 
-input.todoListInput:hover,
-input.todoListInput:focus {
+input.todoListInput:not(.todoListInputDisabled):hover,
+input.todoListInput:not(.todoListInputDisabled):focus {
     padding: 10px 16px;
 }
