--- a/src/components/todolist/todolist.module.css
+++ b/src/components/todolist/todolist.module.css
@@ -1,3 +1,18 @@
+.todoListWrapper {
+    position: relative;
+}
+
+.todolistoverlay {
+    background-color: white;
+    content: "";
+    position: absolute;
+    bottom: -60px;
+    left: 0;
+    right: -20px;
+    top: calc(100% + 20px);
+    z-index: 100;
+}
+
 .todoListNote {
     background: white;
     border: var(--border-medium);
@@ -7,7 +22,7 @@
     height: 500px;
     letter-spacing: -0.01em;
     line-height: 26px;
-    padding: 12px;
+    padding: 16px 20px;
     position: relative;
 }
 
@@ -100,7 +115,7 @@
     overflow: hidden;
     position: relative;
     transform: scale(1);
-    transition: all 0.2s ease-in;
+    transition: all 0.3s ease-in;
     width: 40px;
 }
 
@@ -118,30 +133,47 @@
 }
 
 .todoListItem:not([data-mode="1"]) .checkbox {
-    width: 0;
+    animation: hideCheckbox 0.3s ease-in forwards;
+}
+
+@keyframes hideCheckbox {
+    0% { 
+        width: 40px;
+        border-width: 7px;
+        margin-right: 8px;
+    }
+    50% {
+        border-width: 7px;
+    }
+    75% {
+        width: 0;
+    }
+    100% {         
+        border-width: 0;
+        margin-right: 0;
+        width: 0;
+    }
 }
 
 .todoListItem:not([data-mode="1"]) .checkboxcheck {
     transform: scale(0);
 }
 
-.todoListItemCheckboxDisabled {
-    background: var(--secondary-gray);
-    border: none;
-}
-
 .todoListItemErase {
     background: white;
+    backdrop-filter: blur(12px);
+    opacity: 0;
     bottom: 0;
     left: 0;
     position: absolute;
-    right: 100%;
+    right: 0;
     top: 0;
     transition: all 0.5s ease-in-out;
 }
 
 .todoListItem[data-mode="2"]:hover .todoListItemErase {
-    right: 85%;
+    right: 0;
+    opacity: 70%;
 }
 
 .todoListItem[data-mode="2"] .todoListItemErase.erased {
@@ -183,7 +215,7 @@ input.todoListInput {
     font-size: 24px;
     font-weight: 500;
     line-height: 26px;
-    margin: auto 8px 8px 8px;
+    margin: auto 8px 8px 16px;
     outline: var(--border-medium);
     padding: 8px 16px;
     transition: all 0.2s ease-in;
