Switch gsap tl reference to use REF.

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -44,7 +44,7 @@
   top: 40px;
 }
 
-/* .page {
+.page {
   cursor: url('../../public/icons/MouseIconLarge.png'), auto;
 }
 
@@ -58,7 +58,7 @@
 
 .page input:focus {
   cursor: url('../../public/icons/MouseIconLarge.png'), auto;
-} */
+}
 
 .page .logo {
   bottom: 24px;
