--- a/src/components/todolist/todolist.module.css
+++ b/src/components/todolist/todolist.module.css
@@ -88,13 +88,14 @@
 }
 
 .eraserTrail {
-    border-radius: 12px;
     background-color: white;
+    border-radius: 12px;
     height: 12px;
-    width: 12px;
+    left: calc(50% - 6px);
+    opacity: 1;
     position: absolute;
     top: calc(50% - 6px);
-    left: calc(50% - 6px);
+    width: 12px;
 }
 
 .todoListItem:hover .todoListItemText {
