--- a/src/components/todolist/todolistitem.module.css
+++ b/src/components/todolist/todolistitem.module.css
@@ -16,7 +16,8 @@
     padding-right: 40px;
 }
 
-.todoListItem:hover .eraserTrail {
+.todoListItem:hover .eraserTrail,
+.todoListItem.isAnimatingErase .eraserTrail {
     opacity: 1;
 }
 
@@ -32,7 +33,8 @@
     width: 12px;
 }
 
-.todoListItem:hover .todoListItemText {
+.todoListItem:hover .todoListItemText,
+.todoListItem.isAnimatingErase .todoListItemText {
     background-color: var(--highlight-background);
     color: var(--highlight-foreground);
 }
